--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bytbroo - Kundan Kumar</title>
+    <title>Bytbroo- Kundan Kumar</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -16,13 +16,13 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <style type="text/tailwindcss">
+    <!-- <style type="text/tailwindcss">
       @theme {
         /* --color-clifford: #da373d; */
         --font-text: "Inter Tight", sans-serif;
         --font-heading: "grotesk-x", sans-serif;
       }
-    </style>
+    </style> -->
   </head>
   <body class="font-text text-black">
     <nav class="flex justify-between items-center m-5">
